# haar-cascade-weapon

./: .gitignore  LICENSE  Makefile  README.md  amostras.lst  best.xml  best_1200.xml  bg.txt  positives.vec  pyproject.toml
classifier/: cascade.xml  stage0.xml  stage1.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
src/app/: ETLRetangle.py  ExtractRetangle.py  FrontEnd.py  HarCascade.py  __main__.py
src/scripts/: transform_image_negative.py  transform_image_positive.py
src/utils/: utils.py
